--- a/hadoken-infra/hadoken-infra-mybatis/pom.xml
+++ b/hadoken-infra/hadoken-infra-mybatis/pom.xml
@@ -3,20 +3,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
+        <artifactId>hadoken-infra</artifactId>
         <groupId>com.guangjian.hadoken</groupId>
-        <artifactId>hadoken</artifactId>
         <version>${revision}</version>
     </parent>
-    <artifactId>hadoken-distributor</artifactId>
-    <name>hadoken-distributor</name>
-    <description>hadoken-distributor</description>
-    <packaging>pom</packaging>
 
-    <modules>
-        <module>hadoken-distributor-api</module>
-        <module>hadoken-distributor-http</module>
-        <module>hadoken-distributor-kafka</module>
-    </modules>
+    <artifactId>hadoken-infra-mybatis</artifactId>
+    <name>${project.artifactId}</name>
 
+    <description>hadoken-infra-mybatis</description>
 
+    <dependencies>
+<!--        <dependency>
+            <groupId>com.guangjian.hadoken</groupId>
+            <artifactId>hadoken-common</artifactId>
+        </dependency>-->
+    </dependencies>
 </project>
