--- a/hadoken-adaptor/pom.xml
+++ b/hadoken-adaptor/pom.xml
@@ -3,20 +3,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>hadoken</artifactId>
         <groupId>com.guangjian.hadoken</groupId>
+        <artifactId>hadoken</artifactId>
         <version>${revision}</version>
     </parent>
     <artifactId>hadoken-adaptor</artifactId>
-    <name>hadoken-adaptor</name>
+
+    <name>${project.artifactId}</name>
     <description>hadoken-adaptor</description>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.guangjian.hadoken</groupId>
-            <artifactId>hadoken-common</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>hadoken-adaptor-api</module>
+        <module>hadoken-adaptor-impl</module>
+    </modules>
 
 </project>
