--- a/hadoken-infra/hadoken-common/pom.xml
+++ b/hadoken-infra/hadoken-common/pom.xml
@@ -75,7 +75,7 @@
             <artifactId>apm-toolkit-trace</artifactId>
         </dependency>
 
-        <!-- 工具类相关 -->
+        <!-- lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
