--- a/hadoken-adaptor/pom.xml
+++ b/hadoken-adaptor/pom.xml
@@ -7,6 +7,7 @@
         <artifactId>hadoken</artifactId>
         <version>${revision}</version>
     </parent>
+    <packaging>pom</packaging>
     <artifactId>hadoken-adaptor</artifactId>
 
     <name>${project.artifactId}</name>
