--- a/hadoken-infra/pom.xml
+++ b/hadoken-infra/pom.xml
@@ -20,6 +20,7 @@
         <module>hadoken-infra-mybatis</module>
         <module>hadoken-infra-security</module>
         <module>hadoken-infra-timer</module>
+        <module>hadoken-infra-web</module>
     </modules>
 
 </project>
