--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ target/
 *.iws
 *.iml
 *.ipr
-.mvn/
 
 ### NetBeans ###
 /nbproject/private/
@@ -29,6 +28,11 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+
+### maven ###
+.mvn/
+mvnw
+mvnw.cmd
 
 ### VS Code ###
 .vscode/
