--- a/hadoken-infra/pom.xml
+++ b/hadoken-infra/pom.xml
@@ -17,7 +17,9 @@
     <modules>
         <module>hadoken-common</module>
         <module>hadoken-spring-boot-starter-monitor</module>
+        <module>hadoken-spring-boot-starter-mq</module>
         <module>hadoken-spring-boot-starter-mybatis</module>
+        <module>hadoken-spring-boot-starter-redis</module>
         <module>hadoken-spring-boot-starter-security</module>
         <module>hadoken-spring-boot-starter-timer</module>
         <module>hadoken-spring-boot-starter-web</module>
