--- a/hadoken-manage/hadoken-manage-biz/pom.xml
+++ b/hadoken-manage/hadoken-manage-biz/pom.xml
@@ -3,24 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
+        <artifactId>hadoken-manage</artifactId>
         <groupId>pers.guangjian.hadoken</groupId>
-        <artifactId>hadoken</artifactId>
         <version>${revision}</version>
     </parent>
-    <artifactId>hadoken-manage</artifactId>
+    <artifactId>hadoken-manage-biz</artifactId>
     <name>${project.artifactId}</name>
-    <description>hadoken-manage</description>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>hadoken-manage-api</module>
-        <module>hadoken-manage-biz</module>
-    </modules>
+    <description>hadoken-manage-biz</description>
 
     <dependencies>
-        <dependency>
-            <groupId>pers.guangjian.hadoken</groupId>
-            <artifactId>hadoken-common</artifactId>
-        </dependency>
+
     </dependencies>
 </project>
