--- a/hadoken-tool/hadoken-tool-codegen/hadoken-tool-codegen-api/pom.xml
+++ b/hadoken-tool/hadoken-tool-codegen/hadoken-tool-codegen-api/pom.xml
@@ -2,16 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <artifactId>hadoken-manage</artifactId>
         <groupId>pers.guangjian.hadoken</groupId>
+        <artifactId>hadoken-tool-codegen</artifactId>
         <version>${revision}</version>
     </parent>
-    <artifactId>hadoken-manage-impl</artifactId>
+
+    <artifactId>hadoken-tool-codegen-api</artifactId>
+
     <name>${project.artifactId}</name>
-    <description>hadoken-manage-impl</description>
+    <description>hadoken-tool-codegen-api</description>
 
     <dependencies>
-
+        <dependency>
+            <groupId>pers.guangjian.hadoken</groupId>
+            <artifactId>hadoken-common</artifactId>
+        </dependency>
     </dependencies>
 </project>
