--- a/hadoken-tool/hadoken-tool-codegen/pom.xml
+++ b/hadoken-tool/hadoken-tool-codegen/pom.xml
@@ -3,24 +3,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
+        <artifactId>hadoken-tool</artifactId>
         <groupId>pers.guangjian.hadoken</groupId>
-        <artifactId>hadoken</artifactId>
         <version>${revision}</version>
     </parent>
-    <artifactId>hadoken-manage</artifactId>
-    <name>${project.artifactId}</name>
-    <description>hadoken-manage</description>
+
+    <artifactId>hadoken-tool-codegen</artifactId>
     <packaging>pom</packaging>
 
-    <modules>
-        <module>hadoken-manage-api</module>
-        <module>hadoken-manage-biz</module>
-    </modules>
+    <name>${project.artifactId}</name>
+    <description>hadoken-tool-codegen</description>
 
-    <dependencies>
-        <dependency>
-            <groupId>pers.guangjian.hadoken</groupId>
-            <artifactId>hadoken-common</artifactId>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>hadoken-tool-codegen-api</module>
+        <module>hadoken-tool-codegen-biz</module>
+    </modules>
 </project>
