--- a/hadoken-infra/hadoken-spring-boot-starter-jpa/pom.xml
+++ b/hadoken-infra/hadoken-spring-boot-starter-jpa/pom.xml
@@ -34,5 +34,9 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.bgee.log4jdbc-log4j2</groupId>
+            <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+        </dependency>
     </dependencies>
 </project>
