--- a/hadoken-infra/hadoken-spring-boot-starter-web/pom.xml
+++ b/hadoken-infra/hadoken-spring-boot-starter-web/pom.xml
@@ -43,6 +43,10 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+        </dependency>
 
         <!-- 服务保障相关 -->
         <dependency>
