--- a/hadoken-server/src/main/resources/config/application-dev.yaml
+++ b/hadoken-server/src/main/resources/config/application-dev.yaml
@@ -59,7 +59,7 @@ spring:
 # 配置项，设置当前项目所有自定义的配置
 hadoken:
   security:
-    token-header: Authorization
+    token-header: Bearer
     token-secret: abcdefghijklmnopqrstuvwxyz
     token-timeout: 1d
     session-timeout: 30m
