--- a/hadoken-element/hadoken-element-auth/pom.xml
+++ b/hadoken-element/hadoken-element-auth/pom.xml
@@ -12,4 +12,23 @@
     <name>${project.artifactId}</name>
     <description>hadoken-element-auth</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>pers.guangjian.hadoken</groupId>
+            <artifactId>hadoken-spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>pers.guangjian.hadoken</groupId>
+            <artifactId>hadoken-spring-boot-starter-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>pers.guangjian.hadoken</groupId>
+            <artifactId>hadoken-spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>pers.guangjian.hadoken</groupId>
+            <artifactId>hadoken-spring-boot-starter-redis</artifactId>
+        </dependency>
+    </dependencies>
 </project>
