--- a/hadoken-connector/hadoken-connector-mqtt/pom.xml
+++ b/hadoken-connector/hadoken-connector-mqtt/pom.xml
@@ -12,4 +12,28 @@
     <name>hadoken-connector-mqtt</name>
     <description>hadoken-connector-mqtt</description>
 
+    <dependencies>
+
+        <!-- 内部依赖 start -->
+        <dependency>
+            <groupId>pers.guangjian.hadoken</groupId>
+            <artifactId>hadoken-common</artifactId>
+        </dependency>
+        <!-- 内部依赖 end -->
+
+        <!-- mqtt Spring消息整合依赖包 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-integration</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-stream</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-mqtt</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
