--- a/hadoken-dependence/pom.xml
+++ b/hadoken-dependence/pom.xml
@@ -58,6 +58,7 @@
         <!-- oshi监控需要指定jna版本, 问题详见 https://github.com/oshi/oshi/issues/1040 -->
         <jna.version>5.5.0</jna.version>
         <jjwt.version>0.11.2</jjwt.version>
+        <modbus.version>3.0.3</modbus.version>
     </properties>
 
     <dependencyManagement>
@@ -446,7 +447,21 @@
                 <artifactId>commons-configuration</artifactId>
                 <version>${configuration.version}</version>
             </dependency>
+
+            <!-- modbus4j -->
+            <dependency>
+                <groupId>com.infiniteautomation</groupId>
+                <artifactId>modbus4j</artifactId>
+                <version>${modbus.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
+    <repositories>
+        <repository>
+            <id>ias-releases</id>
+            <name>Infinite Automation Release Repository</name>
+            <url>https://maven.mangoautomation.net/repository/ias-release/</url>
+        </repository>
+    </repositories>
 </project>
